ready fr v1 push

--- a/app/views/poas/_form.html.erb
+++ b/app/views/poas/_form.html.erb
@@ -10,65 +10,71 @@
       </ul>
     </div>
   <% end %>
-
+  <fieldset>
   <div class="field">
-    <%= f.label :gname %><br />
+    <%= f.label :gname, "Granter's name" %><br />
     <%= f.text_field :gname %>
   </div>
   <div class="field">
-    <%= f.label :gaddress1 %><br />
+    <%= f.label :gaddress1, 'Address line 1' %><br />
     <%= f.text_field :gaddress1 %>
   </div>
   <div class="field">
-    <%= f.label :gaddress2 %><br />
+    <%= f.label :gaddress2, 'Address line 2' %><br />
     <%= f.text_field :gaddress2 %>
   </div>
   <div class="field">
-    <%= f.label :gpostcode %><br />
+    <%= f.label :gpostcode, 'postcode' %><br />
     <%= f.text_field :gpostcode %>
   </div>
+</fieldset>
+</br>
+<fieldset>
   <div class="field">
-    <%= f.label :a1name %><br />
+    <%= f.label :a1name, "First Attorney's name" %><br />
     <%= f.text_field :a1name %>
   </div>
   <div class="field">
-    <%= f.label :a1address1 %><br />
+    <%= f.label :a1address1, 'Address Line 1' %><br />
     <%= f.text_field :a1address1 %>
   </div>
   <div class="field">
-    <%= f.label :a1address2 %><br />
+    <%= f.label :a1address2, 'Address line 2' %><br />
     <%= f.text_field :a1address2 %>
   </div>
   <div class="field">
-    <%= f.label :a1postcode %><br />
+    <%= f.label :a1postcode, 'Postcode' %><br />
     <%= f.text_field :a1postcode %>
   </div>
   <div class="field">
-    <%= f.label :a1dob %><br />
+    <%= f.label :a1dob, 'D.O.B' %><br />
     <%= f.date_select :a1dob %>
   </div>
+</fieldset>
+<fieldset>
   <div class="field">
-    <%= f.label :a2name %><br />
+    <%= f.label :a2name, "Second Attorney's name" %><br />
     <%= f.text_field :a2name %>
   </div>
   <div class="field">
-    <%= f.label :a2address1 %><br />
+    <%= f.label :a2address1, 'Address Line 1' %><br />
     <%= f.text_field :a2address1 %>
   </div>
   <div class="field">
-    <%= f.label :a2address2 %><br />
+    <%= f.label :a2address2, 'Address Line 2' %><br />
     <%= f.text_field :a2address2 %>
   </div>
   <div class="field">
-    <%= f.label :a2postcode %><br />
+    <%= f.label :a2postcode, 'Postcode' %><br />
     <%= f.text_field :a2postcode %>
   </div>
   <div class="field">
-    <%= f.label :a2dob %><br />
+    <%= f.label :a2dob, 'D.O.B' %><br />
     <%= f.date_select :a2dob %>
   </div>
+</fieldset>
   <div class="field">
-    <%= f.label :advanced_directive %><br />
+    <%= f.label :advanced_directive,'Advanced Directive?' %><br />
     <%= f.check_box :advanced_directive %>
   </div>
   <div class="actions">
