--- a/app/views/poas/show.pdf.erb
+++ b/app/views/poas/show.pdf.erb
@@ -1,7 +1,9 @@
-\documentclass{beamer}
-\usepackage[utf8]{inputenc}
-\usepackage[brazil]{babel}
+\documentclass[10pt]{article}
 
+\title{<%= @poa.gname %>}
+\author{<%= @poa.a1name %>}
+
+\begin{document}
 \begin{center}
 {\bf CONTINUING AND WELFARE POWER OF ATTORNEY}
  
@@ -38,21 +40,20 @@ Telephone: (0131) 225 1677
 Fax: (0131) 225 4519
 FAS 2432
 \end{center}
-\clearpage
  
 {\bf CONTINUING and WELFARE POWER OF ATTORNEY}
  
 By \\
  
-{\br <%= @poa.gname %>, <%= @poa.gaddress1 %>, <%= @poa.address2 %>, <%= @poa.gpostcode %> }.
+{\br <%= @poa.gname %>, <%= @poa.gaddress1 %>, <%= @poa.gaddress2 if @poa.gaddress2 %>, <%= @poa.gpostcode %> }.
  
                    \section{Appointment}
 
                    \subsection{}I appoint
 
-                   {\bf \subsubsection{}<%= @poa.a1name %>, } and \\
+                   {\bf \subsubsection{}<%= @poa.a1name %>, <%= @poa.a1address1 %>, <%= @poa.a1address2 if @poa.a1address2  %>, <%= @poa.a1postcode %> } and \\
 
-                   {\bf \subsubsection{}<%= @poa.a2ame %>, }\\
+                   {\bf \subsubsection{}<%= @poa.a2name %>,<%= @poa.a2address1 %>, <%= @poa.a2address2 if @poa.a2address2 %> <%= @poa.a2postcode %> }\\
 
 and each of them alone and the survivors and survivor to be my continuing attorneys and continuing attorney in terms of section 15 of the Adults with Incapacity (Scotland) Act 2000 (which act and any subsequent amendment of that is referred to as the "Act").
 
